--- a/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
+++ b/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
@@ -21,12 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1.19.2\nblas_mkl_info:\n    libraries = ['mkl_rt']\n    library_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\lib']\n    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n    include_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\include']\nblas_opt_info:\n    libraries = ['mkl_rt']\n    library_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\lib']\n    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n    include_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\include']\nlapack_mkl_info:\n    libraries = ['mkl_rt']\n    library_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\lib']\n    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n    include_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\include']\nlapack_opt_info:\n    libraries = ['mkl_rt']\n    library_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\lib']\n    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n    include_dirs = ['C:/Users/Dilan/anaconda3/envs/Strive_School_AI_March_2021\\\\Library\\\\include']\nNone\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.version.version)\n",
+    "print(np.__config__.show())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "a = np.zeros(10)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "a.nbytes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,7 +138,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = a."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27,\n",
+       "       28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44,\n",
+       "       45, 46, 47, 48, 49])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "np.arange(11,50)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([5, 4, 3, 2, 1])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5])\n",
+    "a = a[::-1]\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-eec81b14f965>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-26-eec81b14f965>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    np.full((3,3),:,(0,9))\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.full((3,3),:,(0,9))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,10 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ True,  True, False, False,  True, False])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "find_zero = np.array([1,2,0,0,4,0])\n",
+    "non_zero = find_zero != 0\n",
+    "non_zero"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,10 +263,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "np.eye(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,12 +292,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[[7, 9, 2],\n",
+       "        [3, 5, 1],\n",
+       "        [0, 7, 4]],\n",
+       "\n",
+       "       [[9, 8, 9],\n",
+       "        [1, 5, 6],\n",
+       "        [2, 0, 4]],\n",
+       "\n",
+       "       [[3, 0, 8],\n",
+       "        [5, 8, 0],\n",
+       "        [5, 6, 4]]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "np.random.randint(10,size =(3,3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1517,7 +1653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
