--- a/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
+++ b/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
@@ -64,22 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int8)"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 45
     }
    ],
    "source": [
-    "a = np.zeros(10)\n",
+    "a = np.zeros(10, dtype='int8')\n",
     "a"
    ]
   },
@@ -92,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "80"
+       "10"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 46
     }
    ],
    "source": [
@@ -118,13 +118,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "![image](\"./numpyadd.png\")"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -135,11 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 1, 0, 0, 0, 0, 0], dtype=int8)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
    "source": [
-    "b = a."
+    "b = a.copy()\n",
+    "b[4] = 1\n",
+    "b"
    ]
   },
   {
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +202,13 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 51
     }
    ],
    "source": [
-    "a = np.array([1,2,3,4,5])\n",
-    "a = a[::-1]\n",
-    "a"
+    "to_rvrs = np.array([1,2,3,4,5])\n",
+    "to_rvrs = to_rvrs[::-1]\n",
+    "to_rvrs"
    ]
   },
   {
@@ -209,20 +220,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-eec81b14f965>, line 1)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-26-eec81b14f965>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    np.full((3,3),:,(0,9))\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8]\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
     }
    ],
    "source": [
-    "np.full((3,3),:,(0,9))"
+    "a_vec = np.arange(0,9)\n",
+    "a_mat = a_vec.reshape((3,3))\n",
+    "print(a_vec)\n",
+    "a_mat"
    ]
   },
   {
@@ -292,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -301,21 +326,21 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[[7, 9, 2],\n",
-       "        [3, 5, 1],\n",
-       "        [0, 7, 4]],\n",
+       "array([[[0, 9, 3],\n",
+       "        [6, 2, 8],\n",
+       "        [6, 4, 4]],\n",
        "\n",
-       "       [[9, 8, 9],\n",
-       "        [1, 5, 6],\n",
-       "        [2, 0, 4]],\n",
+       "       [[4, 8, 7],\n",
+       "        [8, 7, 0],\n",
+       "        [2, 8, 3]],\n",
        "\n",
-       "       [[3, 0, 8],\n",
-       "        [5, 8, 0],\n",
-       "        [5, 6, 4]]])"
+       "       [[2, 5, 6],\n",
+       "        [3, 6, 9],\n",
+       "        [5, 8, 9]]])"
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 38
     }
    ],
    "source": [
@@ -331,10 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0.42015816 0.11708927 0.26297574 0.68594268 0.76843282 0.21657309\n  0.01325373 0.26697156 0.57514458 0.32636877]\n [0.74062021 0.5284329  0.12066048 0.0252757  0.6956156  0.02390768\n  0.98140241 0.02531004 0.41880928 0.85289951]\n [0.53327984 0.53980667 0.46427165 0.30351043 0.59047837 0.98579745\n  0.16890454 0.38565957 0.45630035 0.56189505]\n [0.94316899 0.08573959 0.07839279 0.49883171 0.25106861 0.74642259\n  0.4526835  0.96816298 0.19368269 0.53685625]\n [0.40015036 0.15414517 0.82901727 0.94229901 0.42086521 0.45619242\n  0.32155845 0.13960103 0.6366711  0.5674117 ]\n [0.63375727 0.92373432 0.73158565 0.23597204 0.70480789 0.16109978\n  0.55177638 0.35881962 0.3140383  0.13030819]\n [0.8118289  0.8185986  0.1218625  0.2725942  0.52702804 0.83380479\n  0.64096556 0.68980679 0.30506199 0.15063435]\n [0.57194512 0.32343359 0.86021336 0.89476648 0.08900515 0.23743421\n  0.10750713 0.15707503 0.95771492 0.5555275 ]\n [0.06011956 0.85896329 0.86865049 0.11836881 0.73611022 0.6746362\n  0.53293414 0.62920365 0.17038951 0.63198964]\n [0.74887446 0.76324099 0.6036271  0.53244854 0.18707432 0.54847736\n  0.7437863  0.84154089 0.00161849 0.93520555]]\n0.0016184934416985097\n0.9857974489265098\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_max_arr = np.random.rand(10,10)\n",
+    "print(min_max_arr)\n",
+    "print(min_max_arr.min())\n",
+    "print(min_max_arr.max())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -345,10 +383,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.15747287 0.40505789 0.91508092 0.1904759  0.64539228 0.87449004\n 0.15119035 0.32539068 0.88011293 0.01843775 0.08848474 0.80487937\n 0.89083416 0.77434993 0.48282662 0.28855837 0.02019528 0.77104269\n 0.76756266 0.74771712 0.68261571 0.87969897 0.53093613 0.04871704\n 0.86955264 0.60411218 0.37577754 0.3176828  0.16113628 0.27967916]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.4983153669145063"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "mean_vec = np.random.rand(30)\n",
+    "print(mean_vec)\n",
+    "mean = np.mean(mean_vec,axis=0)\n",
+    "mean"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,10 +420,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1. 1. 1. 1. 1.]\n [1. 1. 1. 1. 1.]\n [1. 1. 1. 1. 1.]\n [1. 1. 1. 1. 1.]\n [1. 1. 1. 1. 1.]]\n[[0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 79
+    }
+   ],
+   "source": [
+    "ones_zeros = np.ones((5,5))\n",
+    "zeros = np.zeros((3,3))\n",
+    "print(ones_zeros)\n",
+    "print(zeros)\n",
+    "ones_zeros[1:-1,1:-1] = zeros\n",
+    "ones_zeros"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,10 +463,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
+   "source": [
+    "zero_2 = np.zeros((7,7))\n",
+    "zero_2[1:-1,1:-1] = ones_zeros\n",
+    "zero_2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -400,11 +511,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## False"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -415,10 +526,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n [1. 0. 0. 0. 0.]\n [0. 2. 0. 0. 0.]\n [0. 0. 3. 0. 0.]\n [0. 0. 0. 4. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_5 = np.zeros((5,5))\n",
+    "temp_arr = np.arange(1,5)\n",
+    "#print(arr_5)\n",
+    "temp_arr\n",
+    "arr_5[[1,2,3,4],[0,1,2,3]] = temp_arr\n",
+    "print(arr_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -429,10 +555,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n [1 0 1 0 1 0 1 0]\n [0 1 0 1 0 1 0 1]\n [1 0 1 0 1 0 1 0]\n [0 1 0 1 0 1 0 1]\n [1 0 1 0 1 0 1 0]\n [0 1 0 1 0 1 0 1]\n [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checkerboard_black = np.ones((8,8))\n",
+    "#print(checkerboard_black)\n",
+    "re = np.r_[ 4*[0,1] ]              # even-numbered rows\n",
+    "ro = np.r_[ 4*[1,0] ]\n",
+    "checkerboard = np.row_stack(4*(re, ro))\n",
+    "print(checkerboard)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -442,11 +583,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are 6 matrixes 56(7*8) elements.\n",
+    "That means the 100th element is in the second matix as the 44th element(index x = 1).\n",
+    "44 // no.of raws 7 --> index y = 5\n",
+    "index z = 1\n",
+    "## 100th_index = (1, 5, 1) \n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
