--- a/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/Exercises 72 and 75 (★★★).ipynb
+++ b/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/Exercises 72 and 75 (★★★).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "complimentary-handbook",
    "metadata": {
     "slideshow": {
@@ -11,7 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "# Import the needed libraries"
+    "# Import the needed libraries\n",
+    "import numpy as np"
    ]
   },
   {
@@ -24,11 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "proper-reservoir",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1 2 3]\n [4 5 6]\n [7 8 9]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[4, 5, 6],\n",
+       "       [1, 2, 3],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "arr_to_swap = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "print(arr_to_swap)\n",
+    "arr_to_swap[[0,1]] = arr_to_swap[[1,0]]\n",
+    "arr_to_swap"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,8 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "active-reply",
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]\n[[ 0  1  2  3  4  5]\n [ 2  3  4  5  6  7]\n [ 4  5  6  7  8  9]\n [ 6  7  8  9 10 11]\n [ 8  9 10 11 12 13]\n [10 11 12 13 14 15]\n [12 13 14 15 16 17]\n [14 15 16 17 18 19]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 3.5,  5.5,  7.5,  9.5, 11.5, 13.5, 15.5, 17.5])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "arr_mean = np.arange(1,21)\n",
+    "print(arr_mean)\n",
+    "indexer = np.arange(6)[None, :] + 2*np.arange(8)[:, None]\n",
+    "print(indexer)\n",
+    "arr_mean[indexer]\n",
+    "np.mean(arr_mean[indexer], axis= 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -63,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
