--- a/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
+++ b/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
@@ -947,10 +947,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def equal_arr(a,b):\n",
+    "    compare = a == b\n",
+    "    return compare.all()\n",
+    "\n",
+    "\n",
+    "an_array = np.array([[1,2],[3,4]])\n",
+    "another_array = np.array([[1,2],[3,4]])\n",
+    "print(equal_arr(an_array,another_array))"
+   ]
   },
   {
    "cell_type": "markdown",
