--- a/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
+++ b/Modules/M-01-Programming Foundations/D-06-Python for AI(NumPy)/100_Numpy_exercises.ipynb
@@ -616,10 +616,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0.03259818 0.61919097 0.51411801 0.07107844 0.5883625 ]\n [0.08001592 0.23749737 0.75887694 0.19619878 0.56815868]\n [0.52789753 0.49898915 0.33969417 0.59677516 0.02830722]\n [0.65505456 0.23531891 0.05131516 0.67479918 0.23987777]\n [0.72419735 0.38793521 0.07352485 0.13534877 0.54892556]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def normalized_raws(x):\n",
+    "    x_norm = np.linalg.norm(x, ord = 2, axis = 1, keepdims = True)\n",
+    "    x = x/x_norm\n",
+    "    return x\n",
+    "\n",
+    "abnormal = np.random.rand(5,5)\t\n",
+    "print(normalized_raws(abnormal))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -835,10 +851,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2016-07-01\n2016-07-02\n2016-07-03\n2016-07-04\n2016-07-05\n2016-07-06\n2016-07-07\n2016-07-08\n2016-07-09\n2016-07-10\n2016-07-11\n2016-07-12\n2016-07-13\n2016-07-14\n2016-07-15\n2016-07-16\n2016-07-17\n2016-07-18\n2016-07-19\n2016-07-20\n2016-07-21\n2016-07-22\n2016-07-23\n2016-07-24\n2016-07-25\n2016-07-26\n2016-07-27\n2016-07-28\n2016-07-29\n2016-07-30\n2016-07-31\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "strt_dt = dt.date(2016, 7, 1)\n",
+    "end_dt = dt.date(2016, 7, 31)\n",
+    "\n",
+    "days = [strt_dt + dt.timedelta(days=x) for x in range((end_dt-strt_dt).days + 1)]\n",
+    "\n",
+    "for day in days:\n",
+    "    print(day)\n"
+   ]
   },
   {
    "cell_type": "markdown",
