Update Exercises 23 and 24  (★★☆).ipynb

--- a/Modules/M-01-Programming Foundations/D-07-Python for AI(Pandas)/Exercises 23 and 24  (★★☆).ipynb
+++ b/Modules/M-01-Programming Foundations/D-07-Python for AI(Pandas)/Exercises 23 and 24  (★★☆).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "comic-license",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "supported-bicycle",
    "metadata": {},
    "outputs": [
@@ -35,29 +35,30 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "          0         1         2\n0  0.382436  0.154947  0.802812\n1  0.742694  0.376679  0.479574\n2  0.001150  0.404796  0.424441\n3  0.193681  0.288700  0.393118\n4  0.311691  0.306281  0.289935\n"
+      "          0         1         2\n0  0.725042  0.375019  0.051448\n1  0.837814  0.818248  0.506348\n2  0.701473  0.143917  0.134497\n3  0.817946  0.253330  0.818934\n4  0.786556  0.031685  0.700409\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0    0.446732\n",
-       "1    0.532982\n",
-       "2    0.276796\n",
-       "3    0.291833\n",
-       "4    0.302636\n",
-       "dtype: float64"
-      ]
+       "          0         1         2\n",
+       "0  0.341206 -0.008817 -0.332388\n",
+       "1  0.117010  0.097445 -0.214455\n",
+       "2  0.374844 -0.182712 -0.192132\n",
+       "3  0.187876 -0.376740  0.188864\n",
+       "4  0.280339 -0.474532  0.194192"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.341206</td>\n      <td>-0.008817</td>\n      <td>-0.332388</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.117010</td>\n      <td>0.097445</td>\n      <td>-0.214455</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.374844</td>\n      <td>-0.182712</td>\n      <td>-0.192132</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.187876</td>\n      <td>-0.376740</td>\n      <td>0.188864</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.280339</td>\n      <td>-0.474532</td>\n      <td>0.194192</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 7
     }
    ],
    "source": [
     "df = pd.DataFrame(np.random.random(size=(5, 3))) # a 5x3 frame of float values\n",
     "print(df)\n",
-    "df.mean(axis=1)"
+    "df.sub(df.mean(axis=1),axis=0)"
    ]
   },
   {
