--- a/Modules/M-02-Maths and Statistics/D-01-Linear Algebra/Quiz_1_Lin_Alg.ipynb
+++ b/Modules/M-02-Maths and Statistics/D-01-Linear Algebra/Quiz_1_Lin_Alg.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do your imports here"
+    "#Do your imports here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -29,14 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-1-fa222c5e6d56>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-1-fa222c5e6d56>\"\u001B[1;36m, line \u001B[1;32m14\u001B[0m\n\u001B[1;33m    \u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "# type a function that given a 3_dimensional vector it is able to calculate its magnitude\n",
     "\n",
     "def magnitude_3(a,b,c):\n",
+    "    magnitude = np.sqrt(a*a + b*b + c*c)\n",
+    "    return magnitude\n",
     "\n",
+    "\n",
+    "print(magnitude_3(3, 5, 2))\n",
     "# type a function that given a n_dimensional vector it is able to calculate its magnitude\n",
     "# if you want to try this from python (not jupyter notebook) https://docs.python.org/3/library/argparse.html would be a good addition\n",
     "# if you are doing this from a jupyter notebook only, you can try to promt the user for an input  \n",
@@ -134,9 +148,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "strive_school-ai_march_2021",
    "language": "python",
-   "name": "python3"
+   "display_name": "Strive_School_AI_March_2021"
   },
   "language_info": {
    "codemirror_mode": {
